--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,11 @@
 {
-"presets": ["react-native"]
+  "passPerPreset": true,
+  "presets": [
+    {
+      "plugins": [
+        "./plugins/babelRelayPlugin"
+      ]
+    },
+    "react-native"
+  ]
 }
