--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"babel-core": "^6.22.1",
+		"babel-relay-plugin": "^0.10.0",
 		"react": "15.4.2",
-		"react-native": "0.40.0"
+		"react-native": "0.40.0",
+		"react-relay": "^0.10.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
